
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ PFNGLPOINTPARAMETERIVNVPROC ;
typedef scalar_t__ PFNGLPOINTPARAMETERINVPROC ;
typedef scalar_t__ (* GLADloadproc ) (char*) ;


 int GLAD_GL_NV_point_sprite ;
 scalar_t__ glad_glPointParameteriNV ;
 scalar_t__ glad_glPointParameterivNV ;

__attribute__((used)) static void load_GL_NV_point_sprite(GLADloadproc load) {
 if(!GLAD_GL_NV_point_sprite) return;
 glad_glPointParameteriNV = (PFNGLPOINTPARAMETERINVPROC)load("glPointParameteriNV");
 glad_glPointParameterivNV = (PFNGLPOINTPARAMETERIVNVPROC)load("glPointParameterivNV");
}
